apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__memory__render_memory_collection_text_empty.snap
---
source: lorvex-cli/src/render/snapshots/memory.rs
expression: out
---
Lorvex AI Memories
DB: /tmp/lorvex.db
  ↳ No AI memory yet — let your assistant capture facts via `memory_upsert`, or seed one with `lorvex memory set <key> <content>`.
