apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__memory__render_memory_collection_text_multiple.snap
---
source: lorvex-cli/src/render.rs
expression: out
---
Lorvex AI Memories
DB: /tmp/lorvex.db
  - preferences.tone: friendly
  - notes.long: This is a long memory entry that should be truncated at eighty bytes because we ...
