apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__memory__render_memory_detail_json@json.snap
---
source: lorvex-cli/src/render/snapshots.rs
expression: out
---
{
  "action": "query.memory.detail",
  "db_path": "/tmp/lorvex.db",
  "memory": {
    "content": "friendly",
    "key": "preferences.tone",
    "updated_at": "2026-04-01T10:00:00.000Z",
    "version": "v1"
  }
}
