apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__memory__render_memory_detail_text.snap
---
source: lorvex-cli/src/render/snapshots.rs
expression: out
---
Lorvex Memory
DB: /tmp/lorvex.db
Key: preferences.tone
Updated: 2026-04-01T10:00:00.000Z

friendly
